--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -1,6 +1,3 @@
-@import 'layout';
-@import 'headernavbar';
-
 html {
     font-size: 62.5%; // 1rem is 10px
 }
@@ -29,3 +26,8 @@ body {
     display: grid;
     justify-items: center;
 }
+
+@import 'layout';
+@import 'headernavbar';
+@import 'auth/signin';
+@import 'auth/signup';
