--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -8,26 +8,22 @@ html {
     margin: 0;
     padding: 0;
     box-sizing: inherit;
-    font-family: 'montserrat';
 }
 
 body {
-    overflow-x: hidden;
-    font-weight: normal;
-
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
-    text-rendering: optimizeLegibility;
-    -webkit-tap-highlight-color: transparent;
-}
-
-.app {
-    margin-top: 2rem;
-    display: grid;
-    justify-items: center;
+    font-family: "Open Sans";
+    color: #808080;
 }
 
 @import 'layout';
 @import 'headernavbar';
 @import 'auth/signin';
 @import 'auth/signup';
+
+@import 'page-title';
+@import 'form-fields';
+@import 'details';
+
+@import 'account/account';
+@import 'account/purchase-history';
+@import 'account/account-information';
