updated the child component for purchase history

--- a/src/style/account/purchase-history.scss
+++ b/src/style/account/purchase-history.scss
@@ -1,6 +1,18 @@
 .purchase-history {
     
-    // &__page_title {
-        
-    // }
+    &__page_title {
+        border-bottom: 1px solid #cccccc;
+    }
+    
+    &__border-bottom {
+        border-bottom: 1px solid #f2f2f2;
+    }
+}
+
+.purchases {
+
+}
+
+.purchase-detail {
+
 }
