--- a/src/style/account/purchase-history.scss
+++ b/src/style/account/purchase-history.scss
@@ -1,18 +1,27 @@
 .purchase-history {
-    
+
+    &__content {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        margin: 37px 0;
+    }
+       
     &__page_title {
         border-bottom: 1px solid #cccccc;
     }
-    
+
     &__border-bottom {
         border-bottom: 1px solid #f2f2f2;
     }
 }
 
 .purchases {
-
+    display: grid;
+    grid-gap: 10px;
+    grid-template-columns: repeat(auto-fit, 80px);
+    width: 360px;
 }
 
-.purchase-detail {
+// .purchase-detail {
 
-}
+// }
