--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -28,3 +28,4 @@ body {
 @import 'account/purchase-history';
 @import 'account/account-information';
 @import 'shop/shop';
+@import 'shop/shop-search-bar';
