--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -33,6 +33,7 @@ body {
 //shop
 @import 'shop/shop';
 @import 'shop/shop-search-bar';
+@import 'shop/shop-product';
 
 //quantity
 @import 'quantity';
