--- a/src/style/auth/signup.scss
+++ b/src/style/auth/signup.scss
@@ -2,9 +2,9 @@
     grid-row: content-s/content-e;
     grid-column: s/e;
 
-    // &__page-title {
+    &__page-title {
 
-    // }
+    }
 
     &__form {
         display: grid;
@@ -30,6 +30,7 @@
     &__confirm {
         grid-row: confirm-s/confirm-e;
     }
+
     &__line {
         grid-row: line-s/line-e;
         border-top: 1px solid #ccc;
