--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -1,5 +1,7 @@
+
+
 html {
-    font-size: 62.5%; // 1rem is 10px
+    font-size: 62.5%;
 }
 
 *,
@@ -13,7 +15,13 @@ html {
 body {
     font-family: "Open Sans";
     color: #808080;
+
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    text-rendering: optimizeLegibility;
+    -webkit-tap-highlight-color: transparent;
 }
+
 
 @import 'layout';
 @import 'headernavbar';
@@ -21,20 +29,34 @@ body {
 @import 'form-fields';
 @import 'details';
 
-//auth
+// AUTH 
 @import 'auth/signin';
 @import 'auth/signup';
 
-//account
+// ACCOUNT
 @import 'account/account';
 @import 'account/purchase-history';
 @import 'account/account-information';
 
-//shop
+// SHOP
 @import 'shop/shop';
 @import 'shop/shop-search-bar';
 @import 'shop/shop-product';
 
-//quantity
+// CART
+@import 'shop/shop-cart';
+@import 'shop/cart-product';
+
+// QUANTITY
 @import 'quantity';
 @import 'green-price-tag';
+
+// REVIEW
+@import 'order/review';
+@import 'order/reviewForm';
+@import 'order/reviewProduct';
+
+// INFORMATION
+@import 'information/payment';
+@import 'information/shipping';
+@import 'information/infoHelp';
